5th impact: PDF Reader

--- a/src/content/blog/好怪怪的極限.md
+++ b/src/content/blog/好怪怪的極限.md
@@ -6,8 +6,10 @@ tags:
   - 碎碎念
   - 架站
   - 統計學
+  - 測試測試標籤
 categories:
   - 數位足跡
+  - 測試測試類別
 ---
 
 這些極限被稱為 "Pathetic"（可悲/討厭），通常是因為它們看起來可以用 L'Hôpital's Rule（羅必達法則）解決，但如果你真的這樣做，你會發現微分後的式子比原本的還恐怖，直到你算到懷疑人生。
