--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -6,13 +6,13 @@ pubDate: "Jul 08 2022"
 
 ## 本站信息
 
-- 站名： 拔剑 Sketon
-- 站长： 拔剑 Sketon
-- 地址： https://d-sketon.github.io/
+- 站名： 2.5 次元的茶几
+- 站長： Chamomile Tea Latte
+- 網址： https://a-cup-of-chamomile-tea-latte.github.io/
 
-## 申请方法
+## 申請方法
 
-- 添加本站后，在本页留言，格式如下
+- 添加本站後，在本頁留言，格式如下
 
 ````yml
 ```yml
@@ -22,6 +22,10 @@ pubDate: "Jul 08 2022"
   image: #一张图片
 ```
 ````
+
+## 網頁模板
+- 名稱：[Astro Theme Reimu]
+- 開發者：D-Sketon
 
 import FriendCard from "../components/mdx/FriendCard.astro";
 
