5. fix: confirm local build success and cleanup paths

--- a/src/content/blog/Sample Articles/PDF_Reader_Test.mdx
+++ b/src/content/blog/Sample Articles/PDF_Reader_Test.mdx
@@ -6,7 +6,7 @@ categories: ["PDF"]
 tags: ["Study"]
 ---
 
-import PdfReader from "../../../components/pdfreader.astro";
+import PdfReader from "src/components/PdfReader.astro";
 
 ## 手寫筆記預覽
 
