--- a/src/content/blog/pdf_template.mdx
+++ b/src/content/blog/pdf_template.mdx
@@ -6,7 +6,7 @@ categories: ["PDF"]
 tags: ["Study"]
 ---
 
-import PdfReader from "../../components/pdfreader.astro";
+import PdfReader from "../../components/PdfReader.astro";
 
 ## 模板
 
